# swagger/v1/swagger.yaml
@@ -4,6 +4,80 @@ info:
   title: API V1
   version: v1
 paths:
+  "/api/v1/orders":
+    get:
+      summary: list orders
+      tags:
+      - Orders
+      responses:
+        '200':
+          description: successful
+    post:
+      summary: create order
+      tags:
+      - Orders
+      description: Allows the user to create an order.
+      parameters: []
+      responses:
+        '200':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                order:
+                  schema:
+                    "$ref": "#/components/schemas/order"
+            examples:
+              order:
+                summary: An order example
+                value:
+                  order:
+                    created_by_id: 1
+                    status: pending
+  "/api/v1/orders/{id}":
+    parameters:
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: integer
+    patch:
+      summary: update order
+      tags:
+      - Orders
+      description: Allows the user to update an order. Only the creator of the order
+        can update it.
+      parameters: []
+      responses:
+        '200':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                order:
+                  schema:
+                    "$ref": "#/components/schemas/order"
+            examples:
+              order:
+                summary: An order example
+                value:
+                  order:
+                    created_by_id: 1
+                    status: pending
+    put:
+      summary: update order
+      tags:
+      - Orders
+      responses:
+        '200':
+          description: successful
   "/users":
     post:
       summary: create registration
@@ -146,9 +220,11 @@ components:
       properties:
         name:
           type: string
-        price:
+        creator_id:
           type: integer
-        user_id:
-          type: integer
-        orders_flower_id:
-          type: integer
+        status:
+          type: string
+          enum:
+          - pending
+          - delivered
+          - canceled
